# pacbiowdlR

./: .Rbuildignore  .gitignore  404.html  Cargo.toml  DESCRIPTION  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  cytobands.tsv  debug.R  docsearch.json  fusions.tsv  hg38_gene_promoters_2kb_up_2kb_down.bed  hg38_gene_promoters_longestCDS_2kb_up_200bp_down.bed  index.html  index.md  pacbiowdlR.Rproj  pkgdown.yml  sitemap.xml  weightedCNA.R
R/: GAS2.R  GAS3.R  GeneActivityScores.R  RcppExports.R  ann_variants.R  annotateGenomicCoordinates.R  annotate_genomic_coordinates.R  arriba.R  cna_plot.R  cpg_reader.R  data.R  dataloader.R  extendr-wrappers.R  fusionplot.R  fusionplot2.R  isoseq.R  liftover.R  pacbiowdlR-package.R  package_env.R  pharmcat.R  plot.R  plot2.R  read.R  snpEff.R  utils.R
articles/: AnnotateVariants.html  CNAplot.html  Fusionplot.html  Interface.html  index.html
data/: deeptools.ipynb
fusionhg38.txt/: failed_liftover.txt
man/: CNAPlot.Rd  CNAPlot_Highlight.Rd  CNA_plot.Rd  CNA_plot_highlight.Rd  annotateCoverageWithGenes.Rd  annotate_genomic_coordinates.Rd  annotate_genomic_position.Rd  calculate_sequence_similarity.Rd  compare_fusions.Rd  compute_weighted_log2_ratios.Rd  create_fusion_fasta.Rd  determine_fusion_type.Rd  draw_fusions.Rd  find_position_matches.Rd  find_related_fusions.Rd  fit_isoseq_saturation.Rd  gc_repeat_data.Rd  generateCNAPlotFromRegions2.Rd  generateExtendedGeneIntervals.Rd  generate_offsets.Rd  get_fusion_sequences.Rd  get_fusions_from_vcf.Rd  get_neosplice_db.Rd  liftover_coordinates.Rd  load_cached_gtf.Rd  (+28 more)
src/rust/: Cargo.toml
src/rust/.github/: copilot-instructions.md
src/rust/src/: bigwig.rs  lib.rs
(+57 files in other folders)
