[package]
name = "pacbiowdlR"
version = "0.1.0"
description = "A CLI tool to copy files from softlinks listed in a JSON file to a new location"
authors = ["Scott Furlan"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
num_cpus = "1.16"
indicatif = { version = "0.17", features = ["rayon"] }