[package]
name = "pacbiowdlR"
version = "0.1.0"
description = "A suite of tools for working with PacBio WDL files"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Scott Furlan"]
autobins = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
num_cpus = "1.16"
indicatif = { version = "0.17", features = ["rayon"] }
flate2 = "1.0"
rust-htslib = "0.44"
thiserror = "1"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "copy_pbWDL"
path = "src/copy_files.rs"

[[bin]]
name = "shrink_fire_bed"
path = "src/shrink_fire_bed.rs"

[[bin]]
name = "annotate_seq"
path = "src/annotate_seq.rs"