[package]
name = 'pacbiowdlR'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'pacbiowdlR'

[dependencies]
extendr-api = '*'
anyhow = "1"
thiserror = "1"
rayon = "1.10"
ndarray = "0.16.1"
noodles-bed = "0.28.0"   # or recent
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bigtools = "0.5"       # ← adjust if your project pins another version